--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="plan-content">
         <h2>3:00 PM</h2>
         <p class="plan-location">Photobooth</p>
-        <p class="plan-desc">@beyondthebooth @molito alabang</p>
+        <p class="plan-desc">@beyondthebooth</p>
       </div>
     </div>
 
