--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
     </div>
   </main>
 
+  <!-- Final Message -->
+  <main class="card" id="finalMessage" style="display:none;">
+    <div class="final-content">
+      <h1 class="final-title">See you on feb 14!</h1>
+      <p class="final-sub">I love you so much!</p>
+    </div>
+    <div class="nav-buttons">
+      <button class="nav-btn" id="finalBackBtn">← Back</button>
+    </div>
+  </main>
+
   <!-- Celebration + Photo Screen -->
   <main class="card" id="celebrationSection" style="display:none;">
     <div class="celebration-content">
